--- a/src/FabrikamFiber.Web/packages.config
+++ b/src/FabrikamFiber.Web/packages.config
@@ -9,6 +9,6 @@
   <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net40" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net40" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net40" />
-  <package id="System.Web.Providers" version="1.0.1" />
+  <package id="System.Web.Providers" version="1.0.1" requireReinstallation="true" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net40" />
 </packages>
