--- a/src/FabrikamFiber.Web/packages.config
+++ b/src/FabrikamFiber.Web/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="4.1.10331.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Ninject" version="3.2.0.0" targetFramework="net40" />
-  <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net40" />
-  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net40" />
-  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net40" />
+  <package id="Ninject" version="3.3.4" targetFramework="net48" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net48" />
+  <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net48" />
+  <package id="Ninject.Web.Common.Owin" version="3.3.2" targetFramework="net48" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="System.Web.Providers" version="1.0.1" requireReinstallation="true" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net40" />
 </packages>
