add Azure AD authentication

--- a/src/FabrikamFiber.Web/Web.config
+++ b/src/FabrikamFiber.Web/Web.config
@@ -14,6 +14,11 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	  <add key="ClientId" value="e1c34d3a-8eaf-4471-85eb-1d7ca83b824f" />
+	  <add key="redirectUri" value="http://localhost:16535/" />
+	  <add key="Tenant" value="kenschlobohm.onmicrosoft.com" />
+	  <add key="Authority" value="https://login.microsoftonline.com/562b981e-de62-4d8c-a9d9-1993c19bc572/v2.0" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
