--- a/src/FabrikamFiber.Web/packages.config
+++ b/src/FabrikamFiber.Web/packages.config
@@ -4,15 +4,25 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net48" />
   <package id="Ninject" version="3.3.4" targetFramework="net48" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net48" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net48" />
   <package id="Ninject.Web.Common.Owin" version="3.3.2" targetFramework="net48" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net48" />
   <package id="System.Web.Providers" version="1.0.1" requireReinstallation="true" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net40" />
 </packages>
