--- a/src/FabrikamFiber.Web/Web.config
+++ b/src/FabrikamFiber.Web/Web.config
@@ -15,10 +15,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-	  <add key="ClientId" value="e1c34d3a-8eaf-4471-85eb-1d7ca83b824f" />
+	  <!--<add key="ClientId" value="e1c34d3a-8eaf-4471-85eb-1d7ca83b824f" />-->
+	  <add key="ClientId" value="38acd9d2-dfae-4a7f-bf1e-4f061c0e5685"/>
 	  <add key="redirectUri" value="http://localhost:16535/" />
-	  <add key="Tenant" value="kenschlobohm.onmicrosoft.com" />
-	  <add key="Authority" value="https://login.microsoftonline.com/562b981e-de62-4d8c-a9d9-1993c19bc572/v2.0" />
+	  <add key="Tenant" value="562b981e-de62-4d8c-a9d9-1993c19bc572" />
+	  <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
